--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Gitの勉強 from gh-pages</title>
   </head>
   <body>
-    <h1>gh-pagesブランチはGitHub Pagesに公開されます。</h1>
+    <h1>gh-pagesブランチはGitHub Pagesに公開されます。変更しました！</h1>
   </body>
 </html>
